<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- titles -->
    <string name="title_crydev">Crydev.net Reader</string>
    <string name="title_news">News</string>
    <string name="title_about">About</string>
    <string name="title_forum">Forum</string>
    <string name="title_thread">Thread</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_ce3">Forum - CryEngine 3</string>
    <string name="title_ce2">Forum - CryEngine 2</string>
    <string name="title_login">Login Details</string>
    <string name="title_reply">Post Reply</string>
    <string name="title_prefs">Preferences</string>

    <!-- menus -->
    <string name="home">Home</string>
    <string name="refresh">Refresh</string>
    <string name="bookmark">Bookmark</string>

    <!-- Crydev -->
    <string name="connection_error">Connection Error!</string>
    <string name="try_again_later">Please try again later.</string>
    <string name="exit">Exit</string>
    <string name="retry">Retry</string>
    <string name="connected">Connected!</string>
    <string name="app_thread">App Thread</string>
    <string name="preferences">Preferences</string>

    <!-- Prefs -->
    <string name="current_user">Current User: </string>
    <string name="remember_login">Remember Login</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="keep_screen_on_desc">Keep screen on while browsing the forums.</string>
    <string name="signatures">Toggle Forum Signatures</string>
    <string name="signatures_desc">Show user signatures below each post.</string>
    <string name="login_saved">Login Details Saved</string>
    <string name="login_deleted">Login Details Deleted</string>
    <string name="language">Language</string>
    <string name="language_desc">Choose Language</string>

    <!-- About -->
    <string name="about_author">Author: George Piskas</string>
    <string name="about_version">v1.2.1</string>
    <string name="about_email">geopiskas@gmail.com</string>
    <string name="about_please">Please report any bugs or suggestions to the above address. Don\'t forget to rate! Alternatively, post your reply at the app thread.</string>
    <string name="about_text">Crydev.net Reader allows you to access and browse your favorite website from your Android smartphone. News, Forum and more!</string>
    <string name="translation">Translation: \nAlex Bernal - Deutsch\nЯрыгина Евгения - Русский</string>

    <!-- Utils -->
    <string name="read_more">Read More</string>
    <string name="video_link">Watch video</string>
    <string name="bookmarked">Bookmarked!</string>
    <string name="bookmark_deleted">Deleted!</string>

    <!-- NewsHome -->
    <string name="loading">Loading…</string>

    <!-- Bookmarks -->
    <string name="bookmarks_empty">Bookmarks are empty!</string>
    <string name="something_worng">Something went wrong…</string>
    <string name="bookmark_delete">Delete Bookmark</string>
    <string name="bookmark_delete_desc">Are you sure you want to delete this bookmark?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- ForumHome -->
    <string name="cryengine3">CryENGINE 3</string>
    <string name="showcase3_sub">Subforums: Games, Mods, Levels, Assets, Misc</string>
    <string name="ce3_sub">Subforums: Programming \&amp; Scripting, CryMono, Scaleform, Asset Creation, General CE3 Discussion, Recruitment</string>
    <string name="sandbox3_sub">Subforums: Level Design, Game Design, Particle \&amp; Materials, Animation \&amp; Trackview, AI \&amp; Smart Objects, Flowgraph, Tools Support, Latest Builds</string>
    <string name="cryengine2">CryENGINE 2</string>
    <string name="showcase2_sub">Subforums: Mods, Levels, Assets, Misc</string>
    <string name="ce2_sub">Subforums: Beginner Questions, Programming \&amp; Scripting, Asset Creation, Recruitment</string>
    <string name="sandbox2_sub">Subforums: Level Design, Game Design, Animation, A.I., Flowgraph, Tools Feedback \&amp; Support</string>
    <string name="community">Community</string>
    <string name="website_support">Website Support</string>
    <string name="website_support_desc">Get support for any website issues \&amp; share your feedback! This is NOT the place for SDK related issues.</string>
    <string name="general_discussion">General Discussion</string>
    <string name="general_discussion_desc">Discuss topics unrelated to modding.</string>
    <string name="tutorials">Tutorials</string>
    <string name="tutorials_desc">Help others by sharing your tutorials here.</string>

    <!-- Ce2_1 -->
    <string name="showcase_gallery">Showcase Gallery</string>
    <string name="mods">Mods</string>
    <string name="mods_desc">Use this section to show off your modifications</string>
    <string name="levels">Levels</string>
    <string name="levels_desc">Use this section to show off your levels</string>
    <string name="assets">Assets</string>
    <string name="assets_desc">Use this section to show off your assets</string>
    <string name="misc">Misc</string>
    <string name="misc_desc">Use this section to show off miscellaneous projects including Fan Art, ToD\'s, Configs other projects.</string>

    <!-- Ce2_2 -->
    <string name="ce2_development">CE2 Development</string>
    <string name="beginner_questions">Beginner Questions</string>
    <string name="beginner_questions_desc">For anything related to mod development that doesn\'t fit in the following categories.</string>
    <string name="programming">Programming</string>
    <string name="programming_desc">Use this forum for questions on C++, Lua, XML, and any other languages used in Crysis modding.</string>
    <string name="asset_creation">Asset Creation</string>
    <string name="asset_creation_desc">Topics about 3DS Max, Softimage, Maya, Photoshop, and various other software packages.</string>
    <string name="recruitment">Recruitment</string>
    <string name="recruitment_desc">Looking for a developer to join your mod, or want a place to advertise your skills? Look no further!</string>

    <!-- Ce2_3 -->
    <string name="sandbox2_editor">Sandbox 2 Editor</string>
    <string name="level_design">Level Design</string>
    <string name="level_design_desc">Any level design topics should be posted in this forum, including terrain, effects and other related queries.</string>
    <string name="game_design">Game Design</string>
    <string name="game_design_desc">Any game design topics should be posted in this forum, including SP/MP design and other related queries.</string>
    <string name="animation">Animation</string>
    <string name="animation_desc">Topics on creating any sort of animation or cinematic using Sandbox 2 should be posted inside this forum.</string>
    <string name="ai">A.I.</string>
    <string name="ai_desc">Seeking artificial intelligence? Waypoint queries? Post it here!</string>
    <string name="flowgraph">Flowgraph</string>
    <string name="flowgraph_desc">Questions about Flowgraphs? Here\'s the place!</string>
    <string name="tools_support">Tools Support</string>
    <string name="tools_support_desc">If you have problems with the Sandbox editor or other provided tools, let us know here.</string>

    <!-- Ce3_1 -->
    <string name="games">Games</string>
    <string name="games_desc">Use this section to show off your stand-alone CE3 games</string>

    <!-- Ce3_2 -->
    <string name="ce3_development">CE3 Development</string>
    <string name="programming_ce3_desc">Use this forum for questions on C++, Lua, XML, and any other languages used in CryENGINE development. Subforum: CryMono</string>
    <string name="scaleform">Scaleform</string>
    <string name="scaleform_desc">If you\'re looking for help with Scaleform, HUD development, UI Emulator/Actions, this is the place!</string>
    <string name="ce3_discussion">CE3 Discussion</string>
    <string name="ce3_discussion_desc">Just getting started? Looking for some information on CE3 and/or CE3 projects? Ask here!</string>

    <!-- Ce3_3 -->
    <string name="sandbox3_editor">Sandbox 3 Editor</string>
    <string name="particles">Particles \&amp; Materials</string>
    <string name="particles_desc">Questions about particle effects and material editing should be asked here.</string>
    <string name="animation_tv">Animation \&amp; TV</string>
    <string name="animation_tv_desc">Topics on creating any sort of animation or cinematic using Sandbox 3 should be posted inside this forum.</string>
    <string name="ai_smart">AI \&amp; Smart Objects</string>
    <string name="ai_smart_desc">Seeking artificial intelligence? Waypoint queries? Post it here!</string>

    <!-- LoginDetails -->
    <string name="fill_fields">Please fill the given fields</string>
    <string name="invalid_login">Invalid Login</string>
    <string name="invalid_login_desc">You have specified an incorrect username or password.</string>
    <string name="ok">OK</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>

    <!-- PostReply -->
    <string name="write_reply">Write your reply…</string>
    <string name="change_user">Change User</string>
    <string name="post_reply">Post Reply</string>
    <string name="reply_posted">Reply posted!</string>

</resources>