<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:defaultValue="false"
        android:key="rememberlogin"
        android:summary="@string/current_user"
        android:title="@string/remember_login" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="keepscreenon"
        android:summary="@string/keep_screen_on_desc"
        android:title="@string/keep_screen_on" />
    
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="togglesigs"
        android:summary="@string/signatures_desc"
        android:title="@string/signatures" />

    <ListPreference
        android:defaultValue="en"
        android:entries="@array/languages"
        android:entryValues="@array/tags"
        android:key="language"
        android:summary="@string/language_desc"
        android:title="@string/language" />

</PreferenceScreen>