<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:contentDescription="@string/title_crydev"
        android:src="@drawable/crydev_logo" />

    <Button
        android:id="@+id/bnews"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/news"
        android:text="@string/title_news" />

    <Button
        android:id="@+id/bforum"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/forum"
        android:text="@string/title_forum" />

    <Button
        android:id="@+id/bbookmarks"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/bookmarks"
        android:text="@string/title_bookmarks" />

    <Button
        android:id="@+id/bprefs"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/menu"
        android:text="@string/preferences" />

</LinearLayout>