<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:onClick="onTouch"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/about_author"
        android:textColor="#33B5E5"
        android:textSize="20sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/about_email"
        android:textColor="#33B5E5"
        android:textSize="20sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="#33B5E5" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:singleLine="false"
        android:paddingLeft="10dp"
        android:text="@string/about_text" />
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="#33B5E5" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:singleLine="false"
        android:paddingLeft="10dp"
        android:text="@string/about_please" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="#33B5E5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="10dp"
            android:singleLine="false"
            android:layout_weight="2"
            android:text="@string/translation" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="8"
            android:text="@string/about_version"
            android:textColor="#33B5E5"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>