<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etpost"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:hint="@string/write_reply"
        android:inputType="textMultiLine"
        android:minHeight="100dp" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp" >

        <Button
            android:id="@+id/bchangeuser"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="changeUserClick"
            android:text="@string/change_user"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etpostusername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/username"
                android:singleLine="true"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etpostpassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="14sp" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bpostreply"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:gravity="center"
        android:onClick="postReplyClick"
        android:text="@string/post_reply" />

    <ProgressBar
        android:id="@+id/progresspost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone" />

</LinearLayout>